--- a/produit_tshirt_femme_3.html
+++ b/produit_tshirt_femme_3.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="scripts/jquery-ui-1.12.1/jquery-ui.structure.min.css" />
     <link rel="stylesheet" type="text/css" href="scripts/jquery-ui-1.12.1/jquery-ui.theme.min.css" />
     <title>T-shirt</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="scripts/jquery-3.6.0.js"></script>
     <script> 
         $(function(){
             $("#header").load("header.html"); 
@@ -22,34 +22,8 @@
     </script>
 </head>
 <body>
-    <header>
-        <div id="headleft">
-            <a href="index.html"><img src="images/erener.png" alt="logo eReneR boutique" title="logo eReneR boutique vetement"></a>
-            <ul>
-                <li> <a href="cataloguefemmes.html"> Femmes </a></li>
-                <li> <a href="cataloguehommes.html"> Hommes </a></li>
-            </ul>
-        </div>
-        <form id="search1" class="search" role="search">
-            <i class="flaticon-loupe"></i>
-            <input type="search" placeholder="Rechercher" name="search">
-        </form>
-        <div id="headright">
-            <label for="toggle">&#9776;</label>
-            <input type="checkbox" id="toggle"/>
-            <ul class="menu">
-                <li> <a href="#"> <img id="langue" src="images/drapeau-anglais.png" alt="petit drapeau anglais"> </a> </li>
-                <li> <a href="moncompte.html"> <i class="flaticon-user"></i> </a></li>
-                <li> <a href="#"> <i class="flaticon-heart"></i> </a> </li>
-                <li> <a href="monpanier.html"> <i class="flaticon-shopping-bag"></i> </a> </li>
-            </ul>
-        </div>
-        <div class="clear"></div>
-        <form id="search2" class="search" role="search">
-            <i class="flaticon-loupe"></i>
-            <input type="search" placeholder="Rechercher" name="search">
-        </form>
-    </header>
+    <div id="header"></div>
+   
     <main id="fiche_produit">
         <div class="right">
             <img id="premierephoto" src="images/tshirt_vert_front.jpeg" alt="" >
@@ -105,39 +79,7 @@
             </div>
         </div>
     </section>
-    <footer>
-        <h1><img src="images/logo_noir.png" alt=""> <br>
-            Notre boutique de vêtements eReneR</h1>
-        <div id="liens">
-            <ul>
-                <li> <a href="qui_sommes_nous.html">Qui sommes nous</a> </li>
-                <li> <a href="contacts.html">Contact</a></li>
-                <li> <a href="reservation.html">Réservation</a></li>
-                <li> <a href="points_de_vente.html">Points de vente</a></li>
-            </ul>
-            <ul>
-                <li> <a href="avis.html">Avis</a></li>
-                <li> <a href="evenements.html">Evenements</a></li>
-                <li> <a href="press.html">Presse</a></li>
-                <li> <a href="carriere.html">Carrières</a></li>
-            </ul>
-            <ul>
-                <li> <a href="mentions_legales.html">Mentions Légales</a></li>
-                <li> <a href="conditions_generales.html">Conditions Générales de Vente</a></li>
-                <li> <a href="politique_confidentialite.html">Politique de confidentialité</a></li>   
-                <li> <a href="plan_site.html">Plan du site</a></li>
-            </ul>
-        </div>
-        <hr>
-        <div id="pied">
-            <p id="newsletter" ><a href="">Inscrivez-vous à la newsletter d'eReneR et recevez 10% de réduction</a></p>
-            <ul id="reseax">
-                <li><a href="https://www.instagram.com/wearefromfuture/"><i class="flaticon-instagram"></i></a></li>
-                <li><a href="https://www.facebook.com/wearefromfuture/?fb_dtsg_ag=AdyZPJqQjV-tfJcY4FFUpqCm29HGKN7Y02LC84VF8qSa2g%3AAdw4glyyygYDYvA1d5Sb75Pqy-bOG1EUFmlEtKDohQtY4A"><i class="flaticon-facebook"></i></a></li>
-                <li><a href=""><i class="flaticon-twitter"></i></a></li>
-            </ul>
-        </div>
-    </footer>
+    <div id="footer"></div>  
     <script>
         let img1 = 'images/tshirt_vert_front.jpeg';
         let img2 = 'images/tshirt_vert_proch.jpeg';
